Update api prefix to include api versions
