# swagger.yml
@@ -12,7 +12,7 @@ basePath: "/"
 
 # Paths supported by the server application
 paths:
-  /product:
+  /api/v1/product:
     post:
       operationId: "app.routes.product.add_product"
       tags:
@@ -50,7 +50,7 @@ paths:
             items:
               $ref: "#/definitions/Product"
 
-  /product/{id}:
+  /api/v1/product/{id}:
     get:
       operationId: "app.routes.product.get_product"
       tags:
